<resources>
    <string name="app_name">Story App</string>
    <string name="login_title">Welcome Back!</string>
    <string name="login_desc">Login to access your personalized experience.</string>

    <string name="sign_up_title">Let\'s get you started!</string>
    <string name="sign_up_desc">Sign up to start your personalized journey.</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>

    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet? </string>
    <string name="sign_up">Sign Up</string>

    <string name="story_image_desc">display the story image</string>
    <string name="no_data">No Data</string>

    <string name="tv_home_greetings">Hello Universe!</string>
    <string name="tv_home_desc">Your stories, an inspiration to others.</string>

    <string name="login_success">Login Success</string>
    <string name="sign_up_success">Sign Up Success</string>
    <string name="create_story_success">Create Story Success</string>

    <string name="loading">Loading</string>
    <string name="floating_btn_desc">Creating your story</string>
    <string name="log_out_desc">Logout of account</string>
    <string name="logout">Logout</string>
    <string name="select_language">Select Language</string>
    <string name="story_details">Story Details</string>
    <string name="back_btn_story_details_desc">Return from story details page</string>
    <string name="description">Description</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="create_story">Create Story</string>
    <string name="create">Create</string>
    <string name="maps">Maps</string>

    <string name="error_story_desc_empty">Please fill in the description first!</string>
    <string name="error_story_image_empty">Please select a picture first!</string>
    <string name="error_wrong_input">Your email or password is wrong. Try Again!</string>
    <string name="error_something_wrong">Something wrong. Try Again!</string>
    <string name="error_wrong_email_format">Invalid email format</string>
    <string name="error_min_length_field">%s cannot be less than %d characters</string>
    <string name="error_empty_field">%s must not be empty</string>
    <string name="error_occurs">Error Occurs</string>
    <string name="error_expired_session">Your session expired, please login again!</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Retry</string>
    <string name="toggle_location_desc">Show location information</string>
    <string name="added_location_success">Added location for story</string>
    <string name="location_not_found">Location not found or disabled. Please turn on your location!</string>
</resources>