<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.auth.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.auth.SignUpActivity">

        <com.raflis.storyapp.ui.auth.AuthDecorationView
            android:id="@+id/decoration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/primary"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/decoration" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/screen_horizontal_margin"
            android:layout_marginTop="50dp"
            android:text="@string/sign_up_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_desc"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <com.raflis.storyapp.ui.auth.AuthEditText
            android:id="@+id/ed_register_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/edt_height"
            android:layout_marginTop="30dp"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_desc" />

        <com.raflis.storyapp.ui.auth.AuthEditText
            android:id="@+id/ed_register_email"
            android:layout_width="0dp"
            android:layout_height="@dimen/edt_height"
            android:layout_marginTop="@dimen/edt_gap"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/ed_register_name" />

        <com.raflis.storyapp.ui.auth.AuthEditText
            android:id="@+id/ed_register_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/edt_height"
            android:layout_marginTop="@dimen/edt_gap"
            android:drawableStart="@drawable/ic_pass"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/ed_register_email" />

        <Button
            android:id="@+id/btn_sign_up"
            style="@style/TextOnButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/edt_gap"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/ed_register_password" />

        <View
            android:id="@+id/base_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/edt_gap"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/ed_register_password" />

        <Button
            android:id="@+id/btn_loading"
            style="@style/TextOnButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/edt_gap"
            android:text="@string/loading"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/ed_register_password" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bellow_auth_button_gap"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/base_btn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/already_have_an_account" />

            <TextView
                android:id="@+id/tv_back_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/primary" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
