<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.create_story.CreateStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/border_radius"
            android:backgroundTint="@color/primary"
            android:contentDescription="@string/back_btn_story_details_desc"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/create_story"
            app:layout_constraintBottom_toBottomOf="@id/ib_back"
            app:layout_constraintEnd_toStartOf="@id/view"
            app:layout_constraintStart_toEndOf="@id/ib_back"
            app:layout_constraintTop_toTopOf="@id/ib_back" />

        <View
            android:id="@+id/view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ib_back" />

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="8dp"
            android:background="@drawable/border_radius"
            android:contentDescription="@string/story_image_desc"
            app:layout_constraintBottom_toTopOf="@+id/btn_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ib_back"
            app:srcCompat="@drawable/ic_placeholder" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/desc_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch_active_location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_desc"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:textColorHint="@color/grey" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="140dp"
            android:text="@string/camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_gallery"
            app:layout_constraintTop_toBottomOf="@+id/iv_preview" />

        <TextView
            android:id="@+id/tv_active_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/toggle_location_desc"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_camera" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_active_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_active_location" />


        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:text="@string/gallery"
            app:layout_constraintBottom_toBottomOf="@+id/btn_camera"
            app:layout_constraintEnd_toStartOf="@+id/btn_camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_preview" />

        <Button
            android:id="@+id/btn_create_story"
            android:layout_width="250dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_edit_text_layout" />

        <Button
            android:id="@+id/btn_loading"
            android:layout_width="250dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/loading"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/desc_edit_text_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
